public enum SystemRole {
    EMPLOYEE, COMPANY_MANAGER
}
